--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Roblox Executors to Enhance Gameplay – Complete 3000-Word Guide</title>
+    <meta name="google-site-verification" content="4mRBXM7icOUrlneE_4dKUzNkc2bzYGpAGD2oQnXfw_c" />
     <style>
         body {
             font-family: Arial, sans-serif;
